# karlsruhe_trash_bot

./: Cargo.toml  Dockerfile  README.md  dev.Dockerfile
.github/workflows/: main.yml
graphql/: add_user.graphql  all_user_data.graphql  delete_user.graphql  notification_status.graphql  schema.graphql  schema.json  search_street.graphql  set_notification.graphql  street_search.graphql  tomorrow.graphql  tomorrow_for_all.graphql  tomorrow_for_user.graphql  users.graphql
src/: lib.rs  main.rs
src/bot_logic/: menu.rs  mod.rs  strings.rs
src/location_lookup/: mod.rs
src/trash_dates/: Cargo.toml  mod.rs
src/trash_dates/src/: lib.rs
tests/: graph.rs
