[package]
name = "trash_bot"
version = "1.0.4"
authors = ["Maximilian Staab <maximilian.staab@mailbox.org>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
graphql_client = "0.9.0"
reqwest = { version = "0.11.3", default-features = false, features = ["json", "rustls-tls"] }
chrono-tz = "0.5.3"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread", "sync"] }
anyhow = "1.0.41"
log = "0.4.14"
env_logger = "0.8.3"
carapax = { version = "0.10.0", features = ["ratelimit", "dialogue", "session-fs"] }
geocoding = { version = "0.3.2", features = ["rustls-tls"], git = "https://github.com/Maximilian-Staab/geocoding" }
clokwerk = "0.4.0-rc1"
num-traits = "0.2.14"
tempfile = "3.2.0"
backoff = { version = "0.3.0", features = ['tokio'] }
